--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Uber</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+	<header>
+		<nav>
+			<div class="container">
+				<ul class="menu">
+					<li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+					<li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
+					<li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
+					<li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
+					<li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
+					<li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
+				</ul>
+			</div>
+		</nav>
+		<div class="subheader">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 offset-md-1">
+						<a href="#" class="subheader_logo"><img src="img/Uber.png" alt="logo"></a>
+						<div class="subheader_official">Официальный партнер Uber в Москве</div>
+					</div>
+
+					<div class="col-md-2 offset-md-2">
+						<div class="subheader_call">Звоните нам ежедневно</div>
+						<a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
+					</div>
+
+					<div class="col-md-2">
+						<button class="subheader_btn">заказать звонок</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+
+	<section class="promo">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 offset-md-1">
+					<h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
+					<h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
+					<div class="promo_descr">Компания UBER динамически развивающаяся. Компания на рынке занимает лидирующее
+						место средитаксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы
+						у себя в личном кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет
+						бонусы запиковое время.
+						<br><br>
+						Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе
+						Москве. Водители у насзарабатывают от 80000- 120000 в месяц.</div>
+					<button class="promo_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="reasons">
+		<div class="container">
+			<div class="reasosns_header">ПРИЕМУЩЕСТВА</div>
+			<div class="reasons_subheader">8 ПРИЧИН НАЧАТЬ РАБОТАТЬ С НАМИ</div>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="reasons_block">
+						<div class="reasons_round">
+							<img src="../src/icons/pocket.png" alt="">
+						</div>
+						<div class="reasons_descr">
+							<div class="reasons_subtitle">Никаких наличных, оплата происходитавтоматически</div>
+							<div class="reasons_text">Стоимость поездки оплачивается пассажиром с привязанной банковской карты,
+								т.е. нет никаких рисков связанных с перевозкой наличности как для пассажира, так и для водителя,
+								Вам не нужно искать мелкие деньги для размена.</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="reasons_block">
+						<div class="reasons_round">
+							<img src="../src/icons/comission.png" alt="">
+						</div>
+						<div class="reasons_descr">
+							<div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
+							<div class="reasons_text">У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку,
+								некоторые наши конкуренты оставляют бонусы себе. Мы работаем честно и с нами водители
+								зарабатывают больше!</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="reasons_block">
+						<div class="reasons_round">
+							<img src="../src/icons/money.png" alt="">
+						</div>
+						<div class="reasons_descr">
+							<div class="reasons_subtitle">Высокий доход с гарантированнымивыплатами</div>
+							<div class="reasons_text">Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам
+								не нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги
+								и ведение банковского счета.</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="reasons_block">
+						<div class="reasons_round">
+							<img src="../src/icons/calendar.png" alt="">
+						</div>
+						<div class="reasons_descr">
+							<div class="reasons_subtitle">Работа в удобное время, никакихграфиков</div>
+							<div class="reasons_text">Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите
+								закончить, нажимаете выйти с линии. Вы можете подраба-
+								тывать только утром, вечером, в выходные или праздничные дни! </div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="reasons_block">
+						<div class="reasons_round">
+							<img src="../src/icons/key.png" alt="">
+						</div>
+						<div class="reasons_descr">
+							<div class="reasons_subtitle">Комфортное, прозрачное и простоеподключение</div>
+							<div class="reasons_text">Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к
+								нам! Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения,
+								через 1-2 дня Вы можете начинать работать!</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="reasons_block">
+						<div class="reasons_round">
+							<img src="../src/icons/order.png" alt="">
+						</div>
+						<div class="reasons_descr">
+							<div class="reasons_subtitle">Всегда большое количество заказов</div>
+							<div class="reasons_text">Приложение показывает, где на данный момент больше всего заказов и где
+								действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда
+								приятные и абсолютно неконфликтные люди, которых приятно возить.</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="reasons_block">
+						<div class="reasons_round">
+							<img src="../src/icons/support.png" alt="">
+						</div>
+						<div class="reasons_descr">
+							<div class="reasons_subtitle">Круглосуточная поддержка</div>
+							<div class="reasons_text">В Uber действует круглосуточная поддержка водителей по электронной почте.
+								Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="reasons_block">
+						<div class="reasons_round">
+							<img src="../src/icons/car.png" alt="">
+						</div>
+						<div class="reasons_descr">
+							<div class="reasons_subtitle">Без шашечек и наклеек</div>
+							<div class="reasons_text">Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и
+								обклеивать его наклейками.</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	
 </body>
+
 </html>
