--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -68,8 +68,8 @@
 
 	<section class="reasons">
 		<div class="container">
-			<div class="reasosns_header">ПРИЕМУЩЕСТВА</div>
-			<div class="reasons_subheader">8 ПРИЧИН НАЧАТЬ РАБОТАТЬ С НАМИ</div>
+			<div class="label">ПРИЕМУЩЕСТВА</div>
+			<div class="title">8 ПРИЧИН НАЧАТЬ РАБОТАТЬ С НАМИ</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="reasons_block">
@@ -174,6 +174,14 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</section>
+
+	<section class="mobile">
+		<div class="container">
+			<div class="label">возможности</div>
+			<div class="title">мобильное приложение uber</div>
+			<div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</div>
 		</div>
 	</section>
 
