--- a/src/index.html
+++ b/src/index.html
@@ -182,10 +182,60 @@
 			<div class="label">возможности</div>
 			<div class="title">мобильное приложение uber</div>
 			<div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</div>
+
+			<div class="row">
+				<div class="col-md-4">
+					<div class="mobile_item mobile_item_1">
+						<div class="mobile_item_subtitle">оформление заказа одним касанием</div>
+						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="mobile_item mobile_item_2">
+						<div class="mobile_item_subtitle">надежная подача</div>
+						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="mobile_item mobile_item_3">
+						<div class="mobile_item_subtitle">прозрачные цены</div>
+						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="mobile_item mobile_item_4">
+						<div class="mobile_item_subtitle">безналичная оплата</div>
+						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="mobile_item mobile_item_5">
+						<div class="mobile_item_subtitle">обратная связь</div>
+						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="mobile_item mobile_item_6">
+						<div class="mobile_item_subtitle">разделить стоимость поездки</div>
+						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 
-	
+	<section class="choice">
+		<div class="container">
+			<div class="label label_white">Возможности</div>
+			<div class="title title_white">Выбор - отличная штука!</div>
+			<div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
+		</div>
+		<div class="choice_car"><img src="img/bg/car.png" alt=""></div>
+		<div class="choice_white"><img src="img/bg/white.jpg" alt=""></div>
+		<div class="choice_descr">Машины на каждый день.<br>
+			Лучше, быстрее и дешевле, чем такси</div>
+	</section>
+
 </body>
 
 </html>
