--- a/src/index.html
+++ b/src/index.html
@@ -231,7 +231,7 @@
 			<div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
 		</div>
 		<div class="choice_car"><img src="img/bg/car.png" alt=""></div>
-		<div class="choice_white"><img src="img/bg/white.jpg" alt=""></div>
+		<div class="choice_white"></div>
 		<div class="choice_descr">Машины на каждый день.<br>
 			Лучше, быстрее и дешевле, чем такси</div>
 	</section>
