--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="css/font.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -74,7 +75,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="../src/icons/pocket.png" alt="">
+							<img src="icons/pocket.png" alt="">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Никаких наличных, оплата происходитавтоматически</div>
@@ -87,7 +88,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="../src/icons/comission.png" alt="">
+							<img src="icons/comission.png" alt="">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
@@ -100,7 +101,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="../src/icons/money.png" alt="">
+							<img src="icons/money.png" alt="">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Высокий доход с гарантированнымивыплатами</div>
@@ -113,7 +114,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="../src/icons/calendar.png" alt="">
+							<img src="icons/calendar.png" alt="">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Работа в удобное время, никакихграфиков</div>
@@ -126,7 +127,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="../src/icons/key.png" alt="">
+							<img src="icons/key.png" alt="">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Комфортное, прозрачное и простоеподключение</div>
@@ -139,7 +140,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="../src/icons/order.png" alt="">
+							<img src="icons/order.png" alt="">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Всегда большое количество заказов</div>
@@ -152,7 +153,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="../src/icons/support.png" alt="">
+							<img src="icons/support.png" alt="">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Круглосуточная поддержка</div>
@@ -164,7 +165,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="../src/icons/car.png" alt="">
+							<img src="icons/car.png" alt="">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Без шашечек и наклеек</div>
@@ -187,37 +188,37 @@
 				<div class="col-md-4">
 					<div class="mobile_item mobile_item_1">
 						<div class="mobile_item_subtitle">оформление заказа одним касанием</div>
-						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+						<div class="mobile_item_plus"></div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="mobile_item mobile_item_2">
 						<div class="mobile_item_subtitle">надежная подача</div>
-						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+						<div class="mobile_item_plus"></div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="mobile_item mobile_item_3">
 						<div class="mobile_item_subtitle">прозрачные цены</div>
-						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+						<div class="mobile_item_plus"></div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="mobile_item mobile_item_4">
 						<div class="mobile_item_subtitle">безналичная оплата</div>
-						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+						<div class="mobile_item_plus"></div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="mobile_item mobile_item_5">
 						<div class="mobile_item_subtitle">обратная связь</div>
-						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+						<div class="mobile_item_plus"></div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="mobile_item mobile_item_6">
 						<div class="mobile_item_subtitle">разделить стоимость поездки</div>
-						<div class="mobile_item_plus"><img src="icons/plus.png" alt=""></div>
+						<div class="mobile_item_plus"></div>
 					</div>
 				</div>
 			</div>
@@ -235,6 +236,124 @@
 		<div class="choice_descr">Машины на каждый день.<br>
 			Лучше, быстрее и дешевле, чем такси</div>
 	</section>
+
+	<section class="require">
+		<div class="container">
+			<div class="label">возможности</div>
+			<div class="title">условия и требования</div>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="require_block">
+						<div class="require_title">УСЛОВИЯ: со своим авто</div>
+						<ul class="require_list">
+							<li>Подключаем к системе UBER  под 10%</li>
+							<li>Ни каких взносов 0%!</li>
+							<li>ИП не требуется</li>
+							<li>Заказы распределяются без учета рейтинга ближайшим водителям</li>
+							<li>Работа только по безналичному расчету</li>
+							<li>Деньги перечисляем на карту водителю или наличными в офисе</li>
+						</ul>
+						<div class="require_descr">В день заработок составляет 7000-12000р + бонус 3000т рублей</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="require_block">
+						<div class="require_title">УСЛОВИЯ: на авто компании:</div>
+						<ul class="require_list">
+							<li>Предоставляем авто без залога</li>
+							<li>Без ежедневных выплат по аренде</li>
+							<li>Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</li>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="require_block require_block_nmb warning">
+						<div class="require_title">ТРЕБОВАНИЕ:</div>
+						<ul class="require_list">
+							<li>Наличие автомобиля без рекламы</li>
+							<li>Автомобиль не должен быть желтый и не с желтыми номерами</li>
+							<li>Машина не старше 3 лет)</li>
+							<li>Стаж вождения не менее 3 лет</li>
+							<li>Девайс на системе андроид 4.0 и выше(самсунг)</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="require_block require_block_nmb warning">
+						<div class="require_title">ДОКУМЕНТЫ:</div>
+						<ul class="require_list">
+							<li>Права 2 стороны</li>
+							<li>Паспорт лицевая сторона!</li>
+							<li>СтС</li>
+							<li>Лицензия (если есть)</li>
+							<li>Номер телефона</li>
+							<li>Номер карты для перечисления денег(указать в письме)!</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="world">
+		<div class="container">
+				<div class="label label_white">города</div>
+				<div class="title title_white">По всему миру</div>
+				<div class="subtitle subtitle_white">Мы в вашем городе и по всему миру</div>
+				<a href="#" class="city">посмотреть все города</a>
+		</div>
+	</section>
+
+	<footer>
+		<div class="footer_divider"></div>
+		<div class="footer_wrapper">
+			 <div>
+				  <div class="footer_social">
+						<a href="#" class="footer_social_item">
+							<span class="icon-facebook"></span>
+						</a>
+						<a href="#" class="footer_social_item">
+							<span class="icon-twitter"></span>
+						</a>
+						<a href="#" class="footer_social_item">
+							<span class="icon-linkedin"></span>
+						</a>
+						<a href="#" class="footer_social_item">
+							<span class="icon-instagram"></span>
+						</a>
+				  </div>
+			 </div>
+			 <div>
+				  <div class="footer_links">
+						<div class="footer_links_main">
+							 <a href="#">на главную</a>
+							 <a href="#">города</a>
+							 <a href="#">для водителей</a>
+						</div>
+						<div class="footer_links_sub">
+							 <a href="#">центр поддержки</a>
+							 <a href="#">вакансии</a>
+							 <a href="#">разработчики</a>
+							 <a href="#">блог</a>
+							 <a href="#">о нас</a>
+						</div>
+						<a href="#" class="footer_links_lang">Русский</a>
+				  </div>
+			 </div>
+			 <div>
+				  <div class="footer_mobile">
+						<a href="#">
+							 <img src="img/app_store.png" alt="App Store">
+						</a>
+						<a href="#">
+							 <img src="img/google_play.png" alt="Google play">
+						</a>
+						<a href="#">
+							 <img src="img/windows_store.png" alt="Windows store">
+						</a>
+				  </div>
+			 </div>
+		</div>
+  </footer>
 
 </body>
 
